--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Dev-Pool/DevPool#readme",
   "dependencies": {
     "mysql2": "^1.6.1",
+    "nodemon": "^1.18.4",
     "nuxt": "^1.4.2",
     "sequelize": "^4.38.1"
   }
