--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^1.6.1",
     "nodemon": "^1.18.4",
     "nuxt": "^1.4.2",
-    "sequelize": "^4.38.1"
+    "sequelize": "^4.38.1",
+    "vue": "^2.5.17"
   }
 }
