--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Dev-Pool/DevPool#readme",
   "dependencies": {
+    "cors": "^2.8.4",
     "mysql2": "^1.6.1",
     "nodemon": "^1.18.4",
     "nuxt": "^1.4.2",
